[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/FormLoginRegister.gd" type="Script" id=1]

[node name="FormLoginRegister" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -1.0
margin_right = 16.0
margin_bottom = 23.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = -13.0
margin_top = -5.0
margin_right = 1030.0
margin_bottom = 605.0

[node name="UsernameLineEdit" type="LineEdit" parent="."]
margin_left = 160.0
margin_top = 149.0
margin_right = 855.0
margin_bottom = 205.0
text = "username"

[node name="PasswordLineEdit" type="LineEdit" parent="."]
margin_left = 160.0
margin_top = 219.0
margin_right = 856.0
margin_bottom = 273.0
text = "Password"

[node name="LoginButton" type="Button" parent="."]
margin_left = 247.0
margin_top = 341.0
margin_right = 455.0
margin_bottom = 395.0
text = "login"

[node name="RegisterButton" type="Button" parent="."]
margin_left = 549.0
margin_top = 339.0
margin_right = 753.0
margin_bottom = 393.0
text = "Register"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="MessageLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[connection signal="pressed" from="LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="RegisterButton" to="." method="_on_RegisterButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
